--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,35 @@ body {
   padding: 0;
   margin: 0;
 }
+
+
+::-webkit-scrollbar {
+  width: 4px;
+  height: 6px;
+}
+
+::-webkit-scrollbar-track {
+  border-radius: 100vh;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #f1640cfb;
+  border: 1px solid #f1640cfb;
+}
+
+.splide__pagination{
+  bottom: -30px !important;
+}
+.splide__pagination__page{
+  background: #D0E8F7 !important;
+}
+.splide__pagination__page.is-active{
+  background: #ff6503 !important;
+}
+
+@media screen and (min-width: 1200px){
+  .splide__pagination{
+    bottom: -25px !important;
+    right: -25%;
+  }
+}
